CLIENTS / Fix (add close tag) wrap container

--- a/css/main.css
+++ b/css/main.css
@@ -4756,7 +4756,7 @@ p {
 .page-top {
   border-top: 1px solid #c2c2c2;
 }
-.page h2 {
+h2 {
   position: absolute;
   top: -13px;
   font-size: 12px;
@@ -4766,7 +4766,7 @@ p {
   color: #c2c2c2;
 }
 @media (min-width: 1200px) {
-  .page h2 {
+  h2 {
     top: -15px;
     font-size: 14px;
   }
@@ -4995,6 +4995,17 @@ p {
 @media (min-width: 1200px) {
   .performance {
     margin-top: 100px;
+  }
+}
+.our-services {
+  position: relative;
+  padding-top: 65px;
+  padding-bottom: 65px;
+}
+@media (min-width: 1200px) {
+  .our-services {
+    padding-top: 77px;
+    padding-bottom: 107px;
   }
 }
 .services {
