--- a/less/blocks/_base.less
+++ b/less/blocks/_base.less
@@ -172,14 +172,14 @@ p {
     border-top: 1px solid #c2c2c2;
 }
 
-.page h2 {
+h2 {
     position: absolute;
     top: -13px;
     font-size: 12px;
     font-weight: 300;
     background-color: #fff;
-        padding: 5px 15px;
-        color: #c2c2c2;
+    padding: 5px 15px;
+    color: #c2c2c2;
 
     @media (min-width: 1200px) {
         top: -15px;
