--- a/less/blocks/_services.less
+++ b/less/blocks/_services.less
@@ -1,3 +1,15 @@
+.our-services {
+    position: relative;
+    padding-top: 65px;
+    padding-bottom: 65px;
+
+    @media (min-width: 1200px) {
+        padding-top: 77px;
+        padding-bottom: 107px;
+    }
+    
+}
+
 .services {
     display: grid;
     grid-template-rows: 1fr;
